--- a/conf/macros-ext.vm
+++ b/conf/macros-ext.vm
@@ -5,7 +5,9 @@
 ## E-mail:      fienen@gmail.com
 ## Website:     http://learndotcms.com/
 ## Description: Loads a set of files to an HTML page based on a library ID. Supports JavaScript, CSS, or VTL.
-##              Supports shared hosts by setting the host's ID in the plugin's plugin.properties file.
+##              Supports shared hosts by setting the host's ID in the plugin's plugin.properties file. Has
+##              built in support for all Google Hosted Libraries without needing to upload any files to your
+##              server. Use the file's Sort Order field to control loading priority.
 ##
 ## Required Parameters:
 ##     $library       - The name of the library you wish to load. (str)
@@ -15,6 +17,22 @@
 ##     $htmlDebug     - Prints debug info. (bool; default: false)
 ##
 #macro(loadResource $library)
+	## ESTABLISH DEFAULT REMOTE RESOURCE SET
+	#if(!$UtilMethods.isSet($defaultResources))
+		#set($defaultResources = $!contents.getEmptyMap())
+		#set($_temp = $!defaultResources.put("angularjs", "http://ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"))
+		#set($_temp = $!defaultResources.put("chromeframe", "http://ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"))
+		#set($_temp = $!defaultResources.put("dojo", "http://ajax.googleapis.com/ajax/libs/dojo/1.8.1/dojo/dojo.js"))
+		#set($_temp = $!defaultResources.put("extjs", "ajax.googleapis.com/ajax/libs/ext-core/3.1.0/ext-core.js"))
+		#set($_temp = $!defaultResources.put("jquery", "http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"))
+		#set($_temp = $!defaultResources.put("jqueryui", "http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/jquery-ui.min.js"))
+		#set($_temp = $!defaultResources.put("mootools", "http://ajax.googleapis.com/ajax/libs/mootools/1.4.5/mootools-yui-compressed.js"))
+		#set($_temp = $!defaultResources.put("prototype", "http://ajax.googleapis.com/ajax/libs/prototype/1.7.1.0/prototype.js"))
+		#set($_temp = $!defaultResources.put("scriptaculous", "http://ajax.googleapis.com/ajax/libs/scriptaculous/1.9.0/scriptaculous.js"))
+		#set($_temp = $!defaultResources.put("swfobjcet", "http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"))
+		#set($_temp = $!defaultResources.put("webfont", "http://ajax.googleapis.com/ajax/libs/webfont/1.0.31/webfont.js"))
+	#end
+	
 	## DEFAULT TO SHOWING COMMENTS BREAKS FOR THE RESOURCE UNLESS OTHERWISE SET
 	#if(!$UtilMethods.isSet($commentBreaks))
 		#set($commentBreaks = true)
@@ -27,7 +45,7 @@
 	
 	## CHECK TO SEE IF WE'VE STARTED TRACKING LOADED LIBRARIES. IF NOT, START NOW.
 	#if(!$UtilMethods.isSet($loadedLibraries))
-		#set($loadedLibraries = $contents.getEmptyList())
+		#set($loadedLibraries = $!contents.getEmptyList())
 	#end
 	
 	## SET UP THE SHARED HOST FOR THE FILE QUERY, IF PROVIDED
@@ -42,36 +60,45 @@
 		#end
 	
 		## GET THE FILES ASSOCIATED WITH THIS RESOURCE LIBRARY
-		#foreach($file in $dotcontent.pull("+structureName:WebResource +(conhost:${host.identifier}$!{sharedHost}) +WebResource.resourceId:${library}",0,''))
-			## SET THE APPROPRIATE FILE SOURCE
-			#if($file.source.selectValue == 'cdn')
-				#set($src = $file.cdn)
-			#else
-				## THIS RETURNS AN UGLY /dotAsset PATH, NEED TO FIND THE HUMAN-READABLE URI
-				#set($src = $filetool.getURI($filetool.getFile($file.identifier, true)))
-			#end
-			
-			## SET UP DIFFERENT MARKUP FOR FILE TYPES
-			#if($file.fileName.contains('js'))
+		#set($libraryQuery = "+structureName:WebResource +(conhost:${host.identifier}$!{sharedHost}) +WebResource.resourceId:${library}")
+		#if($dotcontent.count($libraryQuery) > 0)
+			#foreach($file in $dotcontent.pull($libraryQuery,0,'WebResource.sortOrder asc'))
+				## SET THE APPROPRIATE FILE SOURCE
+				#if($file.source.selectValue == 'cdn')
+					#set($src = $file.cdn)
+				#else
+					## THIS RETURNS AN UGLY /dotAsset PATH, NEED TO FIND THE HUMAN-READABLE URI
+					#set($src = $filetool.getURI($filetool.getFile($file.identifier, true)))
+				#end
+				
+				## SET UP DIFFERENT MARKUP FOR FILE TYPES
+				#if($file.fileName.contains('js'))
 <script src="${src}"></script>
-			#elseif($file.fileName.contains('css'))
+				#elseif($file.fileName.contains('css'))
 <link rel="stylesheet" type="text/css" href="${src}" />
-			#elseif($file.fileName.contains('vtl'))
-				#dotParse($src)
+				#elseif($file.fileName.contains('vtl'))
+					#dotParse($src)
+				#end
+				
+				## RUN ANY SUPPORTING CODE IF DETECTED
+				#if($UtilMethods.isSet($file.code))
+					${render.eval($file.code)}
+				#end
 			#end
-			
-			## RUN ANY SUPPORTING CODE IF DETECTED
-			#if($UtilMethods.isSet($file.code))
-				${render.eval($file.code)}
+		## TRY TO GET IT FROM OUR DEFAULT CDN SOURCES
+		#else
+			## IS THE REQUESTED LIBRARY IN THE DEFAULT LIST?
+			#if($defaultResources.get($library))
+<script src="${defaultResources.get($library)}"></script>			
 			#end
 		#end
 		#if($commentBreaks)
 <!-- End Resource: ${library} -->
 		#end
+		
+		## NOW ADD THIS LIBRARY TO THE LIST OF LOADED ONES
+		#set($_temp = $loadedLibraries.add($library))
 	#end
-	
-	## NOW ADD THIS LIBRARY TO THE LIST OF LOADED ONES
-	#set($_temp = $loadedLibraries.add($library))
 	
 	## SHOW DEBUG INFO
 	#if($htmlDebug)
